# rust_server_test

./: Cargo.toml  benchmark.lua
src/: db.rs  lib.rs  main.rs
src/handlers/: user_handler.rs
src/routes/: user_router.rs
