[package]
name = "actix-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-web-actors = "4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
    "json",
    "chrono",
    "uuid",
    "time"
]}
tokio-postgres = "0.7.2"
deadpool-postgres = "0.10"

chrono = "0.4"
dotenv = "0.15"
futures = "0.3"
syn = { version = "1.0", features = [
    "derive",
    "parsing",
    "printing",
    "proc-macro"
]}

[dev-dependencies]
actix-rt = "2.9"
reqwest = { version = "0.11", features = ["json"] }